[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = 'hbase-driver'
version = "1.0.3"
readme = "README.md"
dependencies = ['kazoo', 'protobuf']

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["hbasedriver", "hbasedriver.common", "hbasedriver.connection", "hbasedriver.exceptions", "hbasedriver.client", "hbasedriver.filter", "hbasedriver.master1", "hbasedriver.model", "hbasedriver.operations", "hbasedriver.protobuf", "hbasedriver.protobuf_py", "hbasedriver.util"]

[project.urls]
Homepage = "https://github.com/innovationb1ue/hbase-driver"
Issues = "https://github.com/innovationb1ue/hbase-driver/issues"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = "kazoo.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "hbasedriver.protobuf_py.*"
ignore_missing_imports = true